--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -15,15 +15,15 @@
     "\n",
     "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltzberg, Ben Webb\n",
     "\n",
-    "Institut Pasteur, CNRS, C3BI\n",
-    "USCF, Department of bioengineering and therapeutic sciences"
+    " - Institut Pasteur, CNRS, C3BI\n",
+    " - UCSF, Department of Bioengineering and Therapeutic Sciences"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python Modeling Interface (pmi) is a powerful set of tools designed\n",
+    "The Python Modeling Interface (PMI) is a powerful set of tools designed\n",
     "to handle all steps of the modeling protocol for\n",
     "typical modeling problems. It is designed to be used by writing a set of\n",
     "Python scripts."
@@ -40,11 +40,7 @@
     "    \n",
     "Each repository above contains the scripts and the data, as well as all the results, that are needed to reproduce the published results. \n",
     "\n",
-    "For a given system, integrative modeling files are stored in different servers:\n",
-    "\n",
-    "- source code is stored in a github repository (e.g., https://github.com/integrativemodeling/npc2018) \n",
-    "- data files are stored in the Zenodo data server (e.g., https://zenodo.org/record/3523241#.XbqXJJwo9UQ)\n",
-    "- structures are stored in the pdb-dev server (e.g., https://pdb-dev.wwpdb.org/)"
+    "Integrative modeling studies are deposited in the [PDB-Dev database](https://pdb-dev.wwpdb.org/), which is run by wwPDB. These deposits may link to auxiliary files in other databases (e.g. EMDB, SASBDB) or by DOI (e.g. Zenodo)."
    ]
   },
   {
@@ -53,24 +49,20 @@
    "source": [
     "We will illustrate the use of IMP.pmi by determining the localization of two\n",
     "subunits of RNA Polymerase III. In the first part we will be utilizing chemical cross-linking coupled with\n",
-    "mass spectrometry (XLMS) combined with comparative models of all subunits. In the second part we will include also cryo-electron microscopy (cryoEM). We will try\n",
+    "mass spectrometry (XLMS) combined with comparative models of all subunits. In the second part we will also include cryo-electron microscopy (cryoEM). We will try\n",
     "to determine the architecture of the complex,\n",
     "hypothesizing that we know the architecture of the core, and aiming to localize the position of C53, C37, C34, C82, and C31. The example can be easily generalized to any other set of subunits.\n",
     "\n",
     "> The quoted text (grey lateral bar) refers to the EM modeling parts, and can be skipped if the modelling is performed only using crosslinks\n",
     "\n",
     "\n",
-    "IMP.pmi references\n",
-    "\n",
-    "[Saltzberg et al. 2018](https://salilab.org/pdf/Saltzberg_MethodsMolBiol_2019.pdf)\n",
-    "\n",
-    "[Bonomi et al. 2018](https://salilab.org/pdf/Bonomi_Structure_2018.pdf)\n",
+    "For more information on IMP.pmi, see [Saltzberg et al. 2018](https://salilab.org/pdf/Saltzberg_MethodsMolBiol_2019.pdf) or [Bonomi et al. 2018](https://salilab.org/pdf/Bonomi_Structure_2018.pdf).\n",
     "\n",
     "\n",
     "\n",
     "## Installation\n",
     "\n",
-    "The current version of the Tutorial is guaranteed to work with IMP 2.11.0. This version can be installed un many plaforms using [anaconda](https://anaconda.org/salilab/imp), which provides all the dependencies.\n",
+    "The current version of the tutorial is tested with IMP 2.11. This version can be installed on many plaforms using [Anaconda](https://anaconda.org/salilab/imp), which provides all the dependencies.\n",
     "\n",
     "To work through the example on your own system, you will need the following\n",
     "packages installed in addition to [IMP itself](https://integrativemodeling.org/nightly/doc/manual/installation.html):\n",
@@ -96,22 +88,22 @@
     "`apt-get`.)\n",
     "\n",
     "Then download the input files, either by \n",
-    "[cloning the GitHub repository](https://github.com/salilab/imp_tutorial/tree/develop)\n",
-    "or by [downloading the zip file](https://github.com/salilab/imp_tutorial/archive/develop.zip)."
+    "[cloning the GitHub repository](https://github.com/Pellarin/imp_tutorial_pol3/tree/master)\n",
+    "or by [downloading the zip file](https://github.com/Pellarin/imp_tutorial_pol3/archive/master.zip)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rnapoliii example scripts are contained in the directory `modeling`."
+    "The rnapoliii example scripts are contained in the directory `rnapoliii/modeling`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Content\n",
+    "## Table of Contents\n",
     "\n",
     "[//]: # (To compile the Table of Content run `python tools/compile_toc.py Tutorial.ipynb` and paste the output here below)\n",
     "\n",
@@ -186,7 +178,7 @@
     "\n",
     "### The four stages of Integrative Modeling <a name=\"3_The_four_stages_of_Integrative_Modeling\"></a>\n",
     "\n",
-    "Structural modeling using IMP is divided into [four stages](@ref procedure).\n",
+    "Structural modeling using IMP is divided into [four stages](https://integrativemodeling.org/2.11.1/doc/manual/intro.html#procedure).\n",
     "\n",
     "Click the links below to see a breakdown of all the modeling steps.\n",
     "\n",
@@ -197,21 +189,7 @@
     "\n",
     "* [Stage 3](#Sampling_2)) Run a sampling protocol to find good scoring conformations.  \n",
     "\n",
-    "* [Stage 4](#Analysis_3)) Analysis of the good scoring conformations.  Clustering; uncertainty; precision; etc...\n",
-    "\n",
-    "### Running the script <a name=\"3_Running_the_script\"></a>\n",
-    "\n",
-    "The first three modeling stages are all contained within one script, `modeling.py`. You can get started by simply changing into the `modeling` directory and then running the script with Python:\n",
-    "\n",
-    "```\n",
-    "python modeling.py\n",
-    "```\n",
-    "\n",
-    "It will take a very long time to complete the sampling; to get an idea of what's going on you can run it with only 50 output frames by:\n",
-    "\n",
-    "```\n",
-    "python test.py\n",
-    "```"
+    "* [Stage 4](#Analysis_3)) Analysis of the good scoring conformations.  Clustering; uncertainty; precision; etc..."
    ]
   },
   {
@@ -253,7 +231,7 @@
     "<figcaption>_Electron microscopy density map for yeast RNA Polymerase III at 10 Ang resolution (emd 1804)_</figcaption></figure>\n",
     "    \n",
     "> **Electron Density as Gaussian Mixture Models**  \n",
-    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  See below for explanation on how to generate GMM and how to analyse them.\n",
+    "Gaussian mixture models (GMMs) are used to greatly speed up scoring by approximating the electron density of individual subunits and experimental EM maps.  Several GMMs has been created for the experimental density map, with different numbers of Gaussians, and are stored in the `*_gmm.mrc`.  The weight, center, and covariance matrix of each Gaussian used to approximate the original EM density can be seen in the corresponding `.txt` file.  See below for explanation on how to generate GMM and how to analyse them.\n",
     "\n",
     "> <figure><img src=\"files/images/rnapoliii_gmm1.png\" width=\"300px\" />\n",
     "> <figcaption>_The EM data represented as a 50 Gaussian mixture model_</figcaption></figure>\n",
@@ -327,7 +305,7 @@
     "\n",
     "Very generally, the *representation* of a system is defined by all the variables that need to be determined based on input information, including the assignment of the system components to geometric objects (e.g. points, spheres, ellipsoids, and 3D Gaussian density functions). \n",
     "\n",
-    "Our RNA Pol II representation employs **spherical beads** of varying sizes and **3D Gaussians** (if the EM data is integrated), which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
+    "Our RNA Pol III representation employs **spherical beads** of varying sizes and **3D Gaussians** (if the EM data is integrated), which coarsen domains of the complex using several resolution scales simultaneously. Here below we show the representation for the Pol II case, but the same applies to Pol III.\n",
     "\n",
     "<figure><img src=\"files/images/rnapolii_Multi-scale_representation.png\" width=\"600px\" />\n",
     "<figcaption>_Multi-scale representation of Rpb1 subunit of RNA Pol II_</figcaption></figure>\n",
@@ -378,7 +356,7 @@
    "source": [
     "### Dissecting the script <a name=\"Dissecting_the_script_3\"></a>\n",
     "\n",
-    "The script `modeling/modeling.py` sets up the representation of the system and the restraint.\n",
+    "The Python script sets up the representation of the system and the restraint.\n",
     "\n",
     "The first part of the script import the necessary libraries."
    ]
@@ -400,7 +378,7 @@
     "import IMP.pmi.macros\n",
     "import IMP.pmi.topology\n",
     "\n",
-    "# this line is temporary until next IMP release\n",
+    "# Hot fixes correcting minor bugs in IMP 2.11.1\n",
     "import tutorial_util\n",
     "\n",
     "import os\n",
@@ -414,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two options. Either we use only the crosslinks, or we use the crosslinks with the cryoEM data. This option is encoded in the following variable, and will import relevant libraries "
+    "There are two options. Either we use only the crosslinks, or we use the crosslinks with the cryoEM data. This option is encoded in the following variable, and will import relevant libraries."
    ]
   },
   {
@@ -628,7 +606,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can display the representation of system the along the sequence. Each color corresponds to a domain of the complex assigned to an individual rigid body. White spaces are the beads."
+    "We can display the representation of the system along the sequence. Each color corresponds to a domain of the complex assigned to an individual rigid body. White spaces are the beads."
    ]
   },
   {
@@ -816,29 +794,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> #### Electron Microscopy Restraint <a name=\"EM_4\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> #### Electron Microscopy Restraint <a name=\"EM_4\"></a>\n",
+    ">\n",
     "> The [GaussianEMRestraint](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1isd_1_1GaussianEMRestraint.html) uses a density overlap function to compare model to data.\n",
     "First the EM map is approximated with a Gaussian Mixture Model (GMM, done separately).\n",
     "Second, the components of the model are represented with Gaussians (forming the model GMM).\n",
-    "\n",
+    ">\n",
     "> * `slope`: nudge model closer to map when far away\n",
     "> * `weight`: heuristic, needed to calibrate the EM restraint with the other terms. \n",
-    "\n",
+    ">\n",
     "> and then add it to the Model and output objects.\n",
-    "> The restraint is fully described in this paper [Bonomi et al. 2018](https://salilab.org/pdf/Bonomi_Structure_2018.pdf)\n",
-    "\n",
+    "> The restraint is fully described in this paper [Bonomi et al. 2018](https://salilab.org/pdf/Bonomi_Structure_2018.pdf).\n",
+    ">\n",
     "> The GMMs are computed using an adapted version of [gmconvert](https://pdbj.org/gmfit/doc_gmconvert/README_gmconvert.html) which exploits a divide and conquer approach [recursive-gmconvert](https://gitlab.pasteur.fr/rpellari/recursive-gmconvert).\n",
-    "\n",
-    "> The GMMs are computed using increasing number of gaussians. The optimal value of gaussians is chosen as the one that reproduces the same resolution as the original map.\n",
-    "\n",
+    ">\n",
+    "> The GMMs are computed using an increasing number of Gaussians. The optimal number of Gaussians is chosen as the one that reproduces the same resolution as the original map.\n",
+    ">\n",
     "> <figure><img src=\"files/images/resolution_analysis.png\" width=\"600px\" />\n",
-    "> <figcaption>_Searching for the optimal number of gaussians. Left. the Fourier Shell Correlation is computed between the experimental map and the GMM (each curve has different number of components. Right. Resolution against the number of components_</figcaption></figure>"
+    "> <figcaption>_Searching for the optimal number of Gaussians. Left. the Fourier Shell Correlation is computed between the experimental map and the GMM (each curve has a different number of components). Right. Resolution against the number of components_</figcaption></figure>"
    ]
   },
   {
@@ -892,6 +865,7 @@
     "mc1=IMP.pmi.macros.ReplicaExchange0(m,\n",
     "              root_hier=root_hier,                         # The root hierarchy\n",
     "              monte_carlo_sample_objects=dof.get_movers()+xl1rest.get_movers(), # All moving particles and parameters\n",
+    "              output_objects=outputobjects,                # Objects to put into the stat file\n",
     "              rmf_output_objects=outputobjects,            # Objects to put into the rmf file\n",
     "              crosslink_restraints=[xl1rest],              # allows XLs to be drawn in the RMF files\n",
     "              monte_carlo_temperature=1.0,   \n",
@@ -912,8 +886,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The cryoEM modeling is slightly different. It uses an iterative approach where the model is refined using gmms with increasing number of components. At the end of each calculation a seed is generated (see below), and used to start a new modeling run.\n",
-    "\n",
+    "> The cryoEM modeling is slightly different. It uses an iterative approach where the model is refined using GMMs with an increasing number of components. At the end of each calculation a seed is generated (see below), and used to start a new modeling run.\n",
+    ">\n",
     "> <figure><img src=\"files/images/rnapoliii_sampling_cryoem.png\" width=\"600px\" />\n",
     "> <figcaption>_Iterative refinement based on seeding/increasing the components in the GMM_</figcaption></figure>"
    ]
@@ -1237,13 +1211,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### Create a seed<a name=\"seed_3\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> ### Create a seed<a name=\"seed_3\"></a>\n",
+    ">\n",
     "> As discussed above, a seed needs to be generated to use the iterative refinement protocol. A seed is a set of conformations, sampled during the modeling, which will be used to start each replica of the Replica Exchange sampling algorithm. In this case we need 48 structures in our seed.\n"
    ]
   },
@@ -1397,12 +1366,7 @@
    "metadata": {},
    "source": [
     "### Sampling Exhaustiveness <a name=\"Sampling_Exhaustiveness_3\"></a>\n",
-    "We can also determine sampling exhaustiveness by dividing the models into multiple sets, performing clustering on each set separately, and comparing the clusters. This step is left as an exercise to the reader. Some things you can try:\n",
-    "* cluster two subsets of the data\n",
-    "* qualitative analysis: look at the localization densities - they should be similar for the two subsets\n",
-    "* quantitative analysis: compute cross-precision for the clusters. \n",
-    "\n",
-    "If the sampling is exhaustive, then similar clusters should be obtained from each independent set, and the inter-cluster precision between two equivalent clusters should be very low (that is, there should be a 1:1 correspondence between the two sets of clusters, though the ordering may be different)."
+    "We can also determine sampling exhaustiveness by dividing the models into multiple sets, performing clustering on each set separately, and comparing the clusters. This is covered in the separate analysis tutorial."
    ]
   }
  ],
