fixed Pol II discrepancies

--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -182,7 +182,7 @@
     "\n",
     "This example will use data from chemical cross linking, EM and comparative models to localize the 5 subunits of the RNA Polymerase III heterodimer and heterotrimer, to a fixed core of the remaining 12 subunits.  \n",
     "\n",
-    "<img src=\"files/images/rnapolii_integrative.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
+    "<img src=\"files/images/rnapoliii_scheme.png\" alt=\"Drawing\" style=\"width: 600px;\"/>\n",
     "\n",
     "### The four stages of Integrative Modeling <a name=\"3_The_four_stages_of_Integrative_Modeling\"></a>\n",
     "\n",
@@ -227,12 +227,12 @@
     "\n",
     "* Sequence information (FASTA files for each subunit)\n",
     "* [10 Angstrom Electron density map](https://www.ebi.ac.uk/pdbe/entry/emdb/EMD-1804) (`.mrc`, `.txt` files)\n",
-    "* [High resolution structure from comparative modeling against Pol II structure](http://www.rcsb.org/pdb/explore/explore.do?structureId=1WCM) (PDB file)\n",
+    "* [High resolution structure from comparative modeling against Pol II structure](http://www.rcsb.org/pdb/explore/explore.do?structureId=1WCM) (PDB file) see below.\n",
     "* Chemical crosslinking datasets (we use two data sets, the apo  and DNA bound complexes, both from [Ferber and Kosinski](https://www.ncbi.nlm.nih.gov/pubmed/27111507))\n",
     "\n",
     "\n",
     "**FASTA File**  \n",
-    "Each residue included in modeling must be explicitly defined in the FASTA text file.  Each individual component (i.e., a protein chain) is identified by a string in the FASTA header line.  From `1WCM.fasta.txt`:\n",
+    "Each residue included in modeling must be explicitly defined in the FASTA text file.  Each individual component (i.e., a protein chain) is identified by a string in the FASTA header line.\n",
     "\n",
     "    >P20434\n",
     "    MDQENERNISRLWRAFRTVKEMVKDRGYFITQEEVELPLEDFKAKYCDSMGRPQRKMMSF\n",
@@ -651,7 +651,7 @@
    "source": [
     "We randomize the initial configuration to remove any bias from the initial starting configuration read from input files. Since each subunit is composed of rigid bodies (i.e., beads constrained in a structure) and flexible beads, the configuration of the system is initialized by displacing each mobile rigid body and each bead randomly by 50 Angstroms, rotating them randomly, and moving them far enough from each other to prevent any steric clashes. \n",
     "\n",
-    "The `excluded_rigid_bodies=fixed_rbs` will exclude from the randomization everything that was fixed above. After running the code below, the system looks like this:\n",
+    "The system will look like this after the initial randomization:\n",
     "\n",
     "<figure><img src=\"files/images/rnapoliii_initial.png\" width=\"600px\" />\n",
     "<figcaption>_Initial random configuration_</figcaption></figure>"
@@ -663,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Shuffle the rigid body and beads configuration of only the molecules we are interested in (Rpb4 and Rpb7)\n",
+    "# Shuffle the rigid body and beads configuration for all molecules\n",
     "IMP.pmi.tools.shuffle_configuration(root_hier,\n",
     "                                    max_translation=50, \n",
     "                                    verbose=False,\n",
@@ -886,7 +886,7 @@
    "outputs": [],
    "source": [
     "# total number of saved frames\n",
-    "num_frames = 10\n",
+    "num_frames = 2\n",
     "\n",
     "# This object defines all components to be sampled as well as the sampling protocol\n",
     "mc1=IMP.pmi.macros.ReplicaExchange0(m,\n",
