Use final DOI for output model

--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -805,12 +805,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datarepo = ihm.location.Repository(doi=\"10.5281/zenodo.3523241\",\n",
+    "datarepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526614\",\n",
     "            root=\"../data\", top_directory='data',\n",
-    "            url=\"https://zenodo.org/record/3523241/files/data.tar.gz\")\n",
-    "clusterrepo = ihm.location.Repository(doi=\"10.5281/zenodo.3523241\",\n",
+    "            url=\"https://zenodo.org/record/3526614/files/data.tar.gz\")\n",
+    "clusterrepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526614\",\n",
     "            root=\"../analysis/cluster.0\", top_directory='cluster.0',\n",
-    "            url=\"https://zenodo.org/record/3523241/files/cluster.0.tar.gz\")\n",
+    "            url=\"https://zenodo.org/record/3526614/files/cluster.0.tar.gz\")\n",
     "s.update_locations_in_repositories([datarepo, clusterrepo])"
    ]
   },
@@ -818,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Essentially, what this does is to rewrite all `FileLocation`s pointing to files under `root` (`../data`) to instead be found in the `top_directory` (`data`) subdirectory inside `url/doi` (`data.tar.gz` at the DOI [10.5281/zenodo.3523241](https://doi.org/10.5281/zenodo.3523241)). (A mandatory DOI is provided for permanence; an optional URL is provided to make it easier for software such as ChimeraX to download the file.) For example the local file `../data/foo/bar` would be found as `data/foo/bar` inside the tar file. A similar rewrite is done for the largest cluster files in `../analysis/cluster.0/`. We can now see that our input experimental information and output files point to DOIs:"
+    "Essentially, what this does is to rewrite all `FileLocation`s pointing to files under `root` (`../data`) to instead be found in the `top_directory` (`data`) subdirectory inside `url/doi` (`data.tar.gz` at the DOI [10.5281/zenodo.3526614](https://doi.org/10.5281/zenodo.3526614)). (A mandatory DOI is provided for permanence; an optional URL is provided to make it easier for software such as ChimeraX to download the file.) For example the local file `../data/foo/bar` would be found as `data/foo/bar` inside the tar file. A similar rewrite is done for the largest cluster files in `../analysis/cluster.0/`. We can now see that our input experimental information and output files point to DOIs:"
    ]
   },
   {
@@ -861,6 +861,13 @@
     "\n",
     "#with open('rnapoliii.bcif', 'wb') as fh:\n",
     "#    ihm.dumper.write(fh, [s], format='BCIF')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(BinaryCIF stores all the same data as mmCIF, but rather than storing it as a text file, the data is compressed and then written out as a [MessagePack](https://msgpack.org/index.html) file, which is a form of binary JSON.)"
    ]
   },
   {
