Upload .zip rather than .tar.gz files

--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -793,7 +793,7 @@
         "\n",
         "We added paths for localization densities and the DCD file with [ihm.location.FileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.FileLocation) objects. These files won't be accessible to end users since they live on the local disk. ([Recall from earlier](#linking) that ProtocolOutput also adds local paths for the cross-link CSV files.)\n",
         "\n",
-        "`FileLocation` takes an optional `repo` argument which, if given, is an [ihm.location.Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) describing the DOI where the files can be found, generally as a `zip` or `tar(.gz)` file (the first argument to [ihm.location.FileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.FileLocation) is a path within the repository if `repo` is specified, otherwise a path on the local disk). So we could explicitly refer to a DOI for each of our external files. (A number of services provide DOIs for uploaded files, such as [Zenodo](https://zenodo.org/) or [FigShare](https://figshare.com/).)\n",
+        "`FileLocation` takes an optional `repo` argument which, if given, is an [ihm.location.Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) describing the DOI where the files can be found, generally as a `zip` file (the first argument to [ihm.location.FileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.FileLocation) is a path within the repository if `repo` is specified, otherwise a path on the local disk). So we could explicitly refer to a DOI for each of our external files. (A number of services provide DOIs for uploaded files, such as [Zenodo](https://zenodo.org/) or [FigShare](https://figshare.com/).)\n",
         "\n",
         "An alternative is to retroactively change the existing `FileLocation`s (both those created automatically by ProtocolOutput and manually by us using python-ihm) using the `root` and `top_directory` arguments to [Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) and the [ihm.System.update_locations_in_repositories](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.update_locations_in_repositories) function:"
       ]
@@ -804,12 +804,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "datarepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526614\",\n",
+        "datarepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526621\",\n",
         "            root=\"../data\", top_directory='data',\n",
-        "            url=\"https://zenodo.org/record/3526614/files/data.tar.gz\")\n",
-        "clusterrepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526614\",\n",
+        "            url=\"https://zenodo.org/record/3526621/files/data.zip\")\n",
+        "clusterrepo = ihm.location.Repository(doi=\"10.5281/zenodo.3526621\",\n",
         "            root=\"../analysis/cluster.0\", top_directory='cluster.0',\n",
-        "            url=\"https://zenodo.org/record/3526614/files/cluster.0.tar.gz\")\n",
+        "            url=\"https://zenodo.org/record/3526621/files/cluster.0.zip\")\n",
         "s.update_locations_in_repositories([datarepo, clusterrepo])"
       ]
     },
@@ -817,7 +817,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Essentially, what this does is to rewrite all `FileLocation`s pointing to files under `root` (`../data`) to instead be found in the `top_directory` (`data`) subdirectory inside `url/doi` (`data.tar.gz` at the DOI [10.5281/zenodo.3526614](https://doi.org/10.5281/zenodo.3526614)). (A mandatory DOI is provided for permanence; an optional URL is provided to make it easier for software such as ChimeraX to download the file.) For example the local file `../data/foo/bar` would be found as `data/foo/bar` inside the tar file. A similar rewrite is done for the largest cluster files in `../analysis/cluster.0/`. We can now see that our input experimental information and output files point to DOIs:"
+        "Essentially, what this does is to rewrite all `FileLocation`s pointing to files under `root` (`../data`) to instead be found in the `top_directory` (`data`) subdirectory inside `url/doi` (`data.zip` at the DOI [10.5281/zenodo.3526621](https://doi.org/10.5281/zenodo.3526621)). (A mandatory DOI is provided for permanence; an optional URL is provided to make it easier for software such as ChimeraX to download the file.) For example the local file `../data/foo/bar` would be found as `data/foo/bar` inside the zip file. A similar rewrite is done for the largest cluster files in `../analysis/cluster.0/`. We can now see that our input experimental information and output files point to DOIs:"
       ]
     },
     {
