Summarize models in PDB-Dev

--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -882,6 +882,13 @@
     "\n",
     "ChimeraX also supports downloading and displaying structures directly from the [PDB-Dev](https://pdb-dev.wwpdb.org/) database, for example from the ChimeraX command line `open 10 from pdbdev`.\n",
     "\n",
+    "> Note that even though PDB-Dev is still quite small, the models vary widely in composition, e.g.\n",
+    ">\n",
+    "> - Some models (e.g. PDBDEV_00000018) are atomic and look much like a traditional \"PDB\" x-ray structure.\n",
+    "> - Some models (e.g. PDBDEV_00000002) contain multiple states that have different sequences (this particular case contains exosome in nucleus-localized and cytoplasm-localized forms).\n",
+    "> - Some models are not of proteins at all - e.g. PDBDEV_00000008 is a model of chromatin, part of the fly genome.\n",
+    "> - Some models contain multiple representations - e.g. PDBDEV_00000012, a model of the yeast nuclear pore complex, contains both models of the scaffold (ring) and the flexible FG repeat regions which occupy the center of the pore.\n",
+    "\n",
     "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release.\n",
     "\n",
     "An example view of the deposition, as rendered by ChimeraX, is shown below. The EM map is shown as a mesh, and the DSS cross-links as green dashed lines. ChimeraX also shows the comparative models used as starting guesses for the subunit structures - toggle off the display of the result models to see them."
@@ -913,7 +920,7 @@
     "\n",
     "mmCIF files are also just plain text files, and can be viewed in any text\n",
     "editor (for example to check for errors, particularly for categories that\n",
-    "ChimeraX doesn't support yet). Most of the data is stored as simple tables\n",
+    "ChimeraX doesn't support yet). Most of the data are stored as simple tables\n",
     "(look for the `loop_` keyword in the file). For example, the coordinates of\n",
     "the coarse-grained beads are stored in the [_ihm_sphere_obj_site table](http://mmcif.wwpdb.org/dictionaries/mmcif_ihm.dic/Categories/ihm_sphere_obj_site.html),\n",
     "the start of which in `rnapoliii.cif` looks like:\n",
