--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -1113,7 +1113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# see the contant of the \"are\" object\n",
+    "# see the content of the \"are\" object\n",
     "print(are)\n",
     "\n",
     "#print the cluster info\n",
@@ -1224,26 +1224,7 @@
    "source": [
     "### build the seed \n",
     "\n",
-    "rmf_name = \"seed.rmf3\"\n",
-    "o=IMP.pmi.output.Output()\n",
-    "o.init_rmf(rmf_name, [are.stath1])\n",
-    "\n",
-    "nreplicas=48\n",
-    "structures=[]\n",
-    "nloop=0\n",
-    "while len(structures) < nreplicas:\n",
-    "    for c in are:\n",
-    "        try:\n",
-    "            structures.append(c.members[nloop])\n",
-    "        except:\n",
-    "            continue\n",
-    "    nloop+=1\n",
-    "\n",
-    "for n in structures:\n",
-    "    are.stath1[n]\n",
-    "    o.write_rmf(rmf_name)\n",
-    "\n",
-    "o.close_rmf(rmf_name)"
+    "are.write_seed(\"seed.rmf3\", 48)"
    ]
   },
   {
@@ -1372,21 +1353,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
