--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Integrating EM and Crosslinking data to localize five subunits of RNA Polymerase III\n",
     "\n",
-    "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltzberg, Ben Webb\n",
+    "Authors: Riccardo Pellarin, Max Bonomi, Charles Greenberg, Daniel Saltsberg, Jan Kosinski, Ben Webb\n",
     "\n",
     " - Institut Pasteur, CNRS, C3BI\n",
     " - UCSF, Department of Bioengineering and Therapeutic Sciences"
@@ -401,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cryoEM=True\n",
+    "cryoEM=False\n",
     "\n",
     "if cryoEM:\n",
     "    import IMP.bayesianem\n",
@@ -847,6 +847,10 @@
     "\n",
     "With the system representation built and data restraints entered, the system is now ready to sample configurations. A replica exchange run can be set up using the [ReplicaExchange0](https://integrativemodeling.org/nightly/doc/ref/classIMP_1_1pmi_1_1macros_1_1ReplicaExchange0.html) macro. (Follow that link for a full description of all of the input parameters.)\n",
     "\n",
+    "Replica exchange greatly improves the sampling (see [wikipedia](https://en.wikipedia.org/wiki/Parallel_tempering) for a superficial description).\n",
+    "\n",
+    "<figure><img src=\"files/images/rnapoliii_replica_exchange.png\" width=\"600px\" />\n",
+    "\n",
     "The sampling is performed by executing the macro:\n",
     "\n",
     "```mc1.execute_macro()```\n"
@@ -859,7 +863,7 @@
    "outputs": [],
    "source": [
     "# total number of saved frames\n",
-    "num_frames = 2\n",
+    "num_frames = 5\n",
     "\n",
     "# This object defines all components to be sampled as well as the sampling protocol\n",
     "mc1=IMP.pmi.macros.ReplicaExchange0(m,\n",
@@ -1353,21 +1357,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
