--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -96,7 +96,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rnapoliii example scripts are contained in the directory `rnapoliii/modeling`."
+    "## Content of this repository"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A short tutorial introduction IMP is in the `doc` directory. The rnapoliii example scripts are contained in the directory `rnapoliii/modeling`. The advanced analysis is contained in the `rnapoliii/analysis`, and the deposition tutorial is in `rnapoliii/deposition`."
    ]
   },
   {
@@ -1350,28 +1357,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Ensemble analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the script in `rnapoliii/modeling/results/ensemble.py` you can get the analysis above for the four different ensembles of solutions: XL, XL+cryoEM with 50 gaussians (step 1), XL+cryoEM with 200 gaussians (step 2), XL+cryoEM with 800 gaussians (step 3). In the same directory you can find the files related to this analysis. Here below you can compare the results from the rmsf and localization (volume threshold set to 0.3 on all images)\n",
+    "\n",
+    "<img src=\"files/images/rnapoliii_xl_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "<figcaption>_RMSF of the XL ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_1_ensemble.png\" alt=\"Localization densities\" width=\"350px\" />\n",
+    "> <figcaption>_RMSF of the XL cryoEM step 1 ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_2_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <figcaption>_RMSF of the XL cryoEM step 2 ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_3_ensemble.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <figcaption>_RMSF of the XL cryoEM step 3 ensemble_</figcaption></figure>\n",
+    "\n",
+    "<img src=\"files/images/rnapoliii_xl_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
+    "<figcaption>_Localization of the XL ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_1_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <figcaption>_Localization of the XL cryoEM step 1 ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_2_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"400px\" />\n",
+    "> <figcaption>_Localization of the XL cryoEM step 2 ensemble_</figcaption></figure>\n",
+    "\n",
+    "> <img src=\"files/images/rnapoliii_xl_cryoem_3_ensemble_localization_0.3.png\" alt=\"Localization densities\" width=\"380px\" />\n",
+    "> <figcaption>_Localization of the XL cryoEM step 3 ensemble_</figcaption></figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sampling Exhaustiveness <a name=\"Sampling_Exhaustiveness_3\"></a>\n",
-    "We can also determine sampling exhaustiveness by dividing the models into multiple sets, performing clustering on each set separately, and comparing the clusters. This is covered in the separate analysis tutorial."
+    "We can also determine sampling exhaustiveness by dividing the models into multiple sets, performing clustering on each set separately, and comparing the clusters. This is covered in the separate analysis tutorial in `rnapoliii/analysis`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model deposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In `rnapoliii/deposition` we will describe the procedure used to deposit integrative modeling studies in the [PDB-Dev](https://pdb-dev.wwpdb.org/) database in mmCIF format."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
