--- a/doc/IMP_example.ipynb
+++ b/doc/IMP_example.ipynb
@@ -19,17 +19,17 @@
     }
    },
    "source": [
-    "##What is IMP?\n",
+    "## What is IMP?\n",
     "\n",
     "IMP is a C++/Python library. \n",
     "\n",
     "IMP provides building blocks and tools to allow methods developers \n",
     "\n",
-    "* to convert data from new experimental methods into spatial restraints, \n",
-    "* to implement optimization and analysis techniques, \n",
-    "* to implement an integrative modeling procedure from scratch; \n",
+    "* to convert data from new experimental methods into spatial restraints; \n",
+    "* to implement optimization and analysis techniques;\n",
+    "* to implement an integrative modeling procedure from scratch.\n",
     "\n",
-    "the developer can use the C++ and Python programming languages to achieve these tasks."
+    "A developer can use the C++ and Python programming languages to achieve these tasks."
    ]
   },
   {
@@ -42,9 +42,7 @@
    "source": [
     "## IMP implementation\n",
     "\n",
-    "IMP is primarily implemented in C++ for speed; \n",
-    "\n",
-    "each of the classes is wrapped so that it can also be used from Python. "
+    "IMP is primarily implemented in C++ for speed. Each of the classes is wrapped so that it can also be used from Python. "
    ]
   },
   {
@@ -55,7 +53,7 @@
     }
    },
    "source": [
-    "IMP is organized into module. Each module contains classes, methods and data which are related. "
+    "IMP is organized into modules. Each module contains classes, methods and data which are related. "
    ]
   },
   {
@@ -141,7 +139,7 @@
    "source": [
     "## Decoration\n",
     "\n",
-    "Decorators allows to access and assing to data associated to particles."
+    "Decorators allow for access and assigning to data associated to particles."
    ]
   },
   {
@@ -180,7 +178,7 @@
    "source": [
     "## Hierarchy\n",
     "\n",
-    "Biological modules are represented hierarchically "
+    "Biological modules are represented hierarchically:"
    ]
   },
   {
@@ -245,7 +243,7 @@
    "source": [
     "## The Movers\n",
     "\n",
-    "Move particle attributes with specific rules"
+    "Movers change particle attributes, following specific rules."
    ]
   },
   {
@@ -288,7 +286,7 @@
    },
    "outputs": [],
    "source": [
-    "# create an harmonic restraint\n",
+    "# create a harmonic restraint\n",
     "hf = IMP.core.Harmonic(4.0,1.0)\n",
     "dr=IMP.core.DistanceRestraint(m,hf,pa,pb)"
    ]
@@ -303,9 +301,9 @@
    "source": [
     "## Containers\n",
     "\n",
-    "Behind the scenes, IMP maintains an IMP::DependencyGraph that tracks how information flows between the particles and the containers, based on the constraints. \n",
+    "Containers are used to manage groups of particles (singletons) or groups of particle pairs, triples, quads.\n",
     "\n",
-    "It is used to optimize the efficiency of the computation"
+    "> Behind the scenes, IMP maintains an IMP::DependencyGraph that tracks how information flows between the particles and the containers, based on the constraints. It is used to optimize the efficiency of the computation."
    ]
   },
   {
@@ -337,7 +335,7 @@
    "source": [
     "## Scoring Function \n",
     "\n",
-    "This is used to calculate how well a configuration in the Model satisfies the Restraints "
+    "This is used to calculate how well a configuration in the Model satisfies the Restraints."
    ]
   },
   {
@@ -362,7 +360,9 @@
     }
    },
    "source": [
-    "## Monte Carlo Sampling"
+    "## Monte Carlo Sampling\n",
+    "\n",
+    "A Monte Carlo sampler applies one or more Movers to move the Particles, scored by the Scoring Function."
    ]
   },
   {
@@ -446,26 +446,45 @@
     "    \n",
     "del rh"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Further reading\n",
+    "\n",
+    "See [the IMP manual](https://integrativemodeling.org/2.11.1/doc/manual/library_example.html) for a similar example.\n",
+    "\n",
+    "Similar functionality is also available for C++ programming. See [using IMP as a C++ library](https://integrativemodeling.org/tutorials/using_cpp/) for more information.\n",
+    "\n",
+    "This example shows a very simple system. While in principle a larger system could be modeled in this fashion, it is generally easier to use IMP::pmi, an IMP module which takes a top-down view of the system, allowing us to refer to biological units instead of individual particles, and packages several useful protocols (such as replica exchange) and tools such as publication-ready plots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
