--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -7,7 +7,28 @@
         "Deposition of integrative models<a id=\"mainpage\"></a>\n",
         "================================\n",
         "\n",
-        "**Table of contents**\n\n - [Why PDB-Dev?](#whypdbdev)\n - [Why mmCIF?](#whymmcif)\n - [Why can't we convert PDB/RMF directly to mmCIF?](#whynotconvert)\n - [Generation of mmCIF files](#mmcifgen)\n - [Basic usage of ProtocolOutput](#basicusage)\n - [Linking to other data](#linking)\n - [Annotation of input files](#annotation)\n - [Polishing the deposition](#polishing)\n  - [Cross-linker type](#xltype)\n  - [Correct number of output models](#fixnummodel)\n  - [Add model coordinates](#addcoords)\n  - [Replace local links with DOIs](#adddois)\n - [Output](#output)\n - [Visualization](#visualization)\n  - [ChimeraX](#chimerax)\n  - [Web browser](#browser)\n  - [Plain text](#plain)\n  - [As Python objects](#python)"
+        "**Table of contents**\n",
+        "\n",
+        " - [Why PDB-Dev?](#whypdbdev)\n",
+        " - [Why mmCIF?](#whymmcif)\n",
+        " - [Why can't we convert PDB/RMF directly to mmCIF?](#whynotconvert)\n",
+        " - [Generation of mmCIF files](#mmcifgen)\n",
+        " - [Basic usage of ProtocolOutput](#basicusage)\n",
+        " - [mmCIF file format](#mmcif)\n",
+        " - [Linking to other data](#linking)\n",
+        " - [Annotation of input files](#annotation)\n",
+        " - [Polishing the deposition](#polishing)\n",
+        "  - [Cross-linker type](#xltype)\n",
+        "  - [Correct number of output models](#fixnummodel)\n",
+        "  - [Add model coordinates](#addcoords)\n",
+        "  - [Replace local links with DOIs](#adddois)\n",
+        " - [Output](#output)\n",
+        " - [Visualization](#visualization)\n",
+        "  - [ChimeraX](#chimerax)\n",
+        "  - [Web browser](#browser)\n",
+        "  - [Plain text](#plain)\n",
+        "  - [As Python objects](#python)\n",
+        " - [Further reading](#further)\n"
       ]
     },
     {
@@ -426,9 +447,67 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# mmCIF file format<a id=\"mmcif\"></a>\n",
+        "\n",
+        "At this point we have basic information which we can write out to an mmCIF file. Let's do that to get an idea of what the file looks like:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import ihm.dumper\n",
+        "with open('initial.cif', 'w') as fh:\n",
+        "    ihm.dumper.write(fh, [s])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "mmCIF is a simple text format, so we can look at `initial.cif` in any text editor. Some simple data are stored in straightforward key:value pairs, e.g.\n",
+        "\n",
+        "```\n",
+        "_struct.title 'Modeling of RNA Pol III'\n",
+        "```\n",
+        "\n",
+        "More complex data can be stored as a table using a `loop` construct. This lists the fields (headings for the columns) after which the data (as rows) follow, e.g.\n",
+        "\n",
+        "```\n",
+        "loop_\n",
+        "_software.pdbx_ordinal\n",
+        "_software.name\n",
+        "_software.classification\n",
+        "_software.description\n",
+        "_software.version\n",
+        "_software.type\n",
+        "_software.location\n",
+        "1 'IMP PMI module' 'integrative model building' 'integrative model building'\n",
+        "2.11.1 program https://integrativemodeling.org\n",
+        "2 'Integrative Modeling Platform (IMP)' 'integrative model building'\n",
+        "'integrative model building' 2.11.1 program https://integrativemodeling.org\n",
+        "3 MODELLER 'comparative modeling'\n",
+        "'Comparative modeling by satisfaction of spatial restraints, build 2013/11/13 18:10:39'\n",
+        "9.10 program https://salilab.org/modeller/\n",
+        "4 MODELLER 'comparative modeling'\n",
+        "'Comparative modeling by satisfaction of spatial restraints, build 2013/11/15 19:51:28'\n",
+        "9.12 program https://salilab.org/modeller/\n",
+        "```\n",
+        "\n",
+        "Missing data are represented by `?` if they are unknown or `.` if they are deliberately omitted (for example if they don't make sense here).\n",
+        "\n",
+        "In each case both the *categories* ([struct](http://mmcif.wwpdb.org/dictionaries/mmcif_pdbx_v50.dic/Categories/struct.html), [software](http://mmcif.wwpdb.org/dictionaries/mmcif_pdbx_v50.dic/Categories/software.html)) and the *data items* ([title](http://mmcif.wwpdb.org/dictionaries/mmcif_pdbx_v50.dic/Items/_struct.title.html), [pdbx_ordinal](http://mmcif.wwpdb.org/dictionaries/mmcif_pdbx_v50.dic/Items/_software.pdbx_ordinal.html), etc.) are defined by PDB, in the [PDBx dictionary](http://mmcif.wwpdb.org/dictionaries/mmcif_pdbx_v50.dic/Index/). This is the same dictionary used for regular PDB entries (e.g. crystal structures). Categories prefixed with `ihm` are in the [IHM dictionary](http://mmcif.wwpdb.org/dictionaries/mmcif_ihm.dic/Index/), which is specific to integrative models."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Linking to other data<a id=\"linking\"></a>\n",
         "\n",
-        "Integrative modeling draws on datasets from a variety of sources, so for a complete deposition all of this data needs to be available. python-ihm provides an [ihm.dataset](https://python-ihm.readthedocs.io/en/latest/dataset.html#module-ihm.dataset) module to describe various types of dataset, such as input experimental data, auxiliary output files (such as localization densities), or workflow files (such as Python scripts for modeling or visualization). For example, each restraint has an associated dataset:"
+        "Integrative modeling draws on datasets from a variety of sources, so for a complete deposition all of this data need to be available. python-ihm provides an [ihm.dataset](https://python-ihm.readthedocs.io/en/latest/dataset.html#module-ihm.dataset) module to describe various types of dataset, such as input experimental data, auxiliary output files (such as localization densities), or workflow files (such as Python scripts for modeling or visualization). For example, each restraint has an associated dataset:"
       ]
     },
     {
@@ -985,6 +1064,15 @@
         "with urllib.request.urlopen('https://pdb-dev.wwpdb.org/static/cif/PDBDEV_00000014.cif') as fh:\n",
         "    s, = ihm.reader.read(fh)\n",
         "print(s.title, s.restraints, s.ensembles, s.state_groups)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Further reading<a id=\"further\"></a>\n",
+        "\n",
+        "More tutorials on using IMP are available at [the IMP web site](https://integrativemodeling.org/tutorials/)."
       ]
     }
   ],
